fix: gap style

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -310,7 +310,7 @@ body {
   width: 100rem;
   display: flex;
   flex-wrap: wrap;
-  gap: 12rem;
+  column-gap: 12rem;
   row-gap: 5.5rem;
   justify-content: center;
 }
